# profiled-fc-cpu

./: .clang-format  .gitignore  CMakeLists.txt  README.md  environment.yml  pylintrc  setup.cfg
docs/: .gitignore  GNUmakefile  dlib-rastrigin-2.txt  dlib-rastrigin-3.txt  dlib-rastrigin-5.txt  dlib-rastrigin-small-2.txt  dlib-rastrigin-small-3.txt  dlib-rastrigin-small-4.txt  functions.R  local_minima_rastrigin.qmd  local_minimima_rastrigin.qmd  naive_parallel_minimization.qmd
src/: CMakeLists.txt  atan2_fitting.cc  callable_traits.hh  dlib_parallel_helical_valley_example.cc  dlib_parallel_rastrigin_example.cc  dlib_parallel_rastrigin_example_5d.cc  dlib_parallel_rosenbrock_example.cc  dlib_rastrigin_example.cc  dlib_serial_helical_valley_example.cc  dlib_serial_rosenbrock_example.cc  geometry.cc  geometry.hh  geometry.test.cc  hastings_acos_fitting.cc  helical_valley.hh  minimizers.hh  minuit2_example.cc  minuit2_rastrigin_example.cc  minuit2_support.cc  minuit2_support.hh  optimization_ex.cc  protected_engine.hh  rastrigin.cc  rastrigin.hh  rastrigin.test.cc  rastrigin_minuit_wrapper.hh  rosenbrock.cc  rosenbrock.hh  rosenbrock.test.cc  rosenbrock_minuit_wrapper.hh  shared_result.cc  shared_result.hh  shared_result.test.cc  solution.cc  solution.hh  stacktrace_example.cc  tbb_example.cc
tools/: make_stacktrace_dot.py
